Changing from custom dataset to TensorDataset

--- a/transformer.ipynb
+++ b/transformer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "id": "f5e0c294",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "id": "e91ce564",
    "metadata": {},
    "outputs": [],
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "id": "2b5d489d",
    "metadata": {},
    "outputs": [],
@@ -102,8 +102,9 @@
     "    \n",
     "class Transformer(nn.Module):\n",
     "    def __init__(self, config:Config):\n",
-    "        self.transformerBlock = nn.ModuleList([TransformerBlock(config) for i in range(config.n_layers)])\n",
+    "        super().__init__()\n",
     "        self.embedding = nn.Embedding(num_embeddings=config.d_vocab, embedding_dim=config.d_model)\n",
+    "        self.transformerBlock = nn.ModuleList([TransformerBlock(config) for _ in range(config.n_layers)])\n",
     "\n",
     "    def forward(self, x):\n",
     "        x = self.embedding(x)\n",
@@ -126,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
    "id": "937b0e3d",
    "metadata": {},
    "outputs": [],
@@ -144,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 25,
    "id": "549c941e",
    "metadata": {},
    "outputs": [],
@@ -201,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 26,
    "id": "9c1b9c78",
    "metadata": {},
    "outputs": [],
@@ -270,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 27,
    "id": "ad6713ca",
    "metadata": {},
    "outputs": [],
@@ -286,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 28,
    "id": "7c274f21",
    "metadata": {},
    "outputs": [
@@ -295,15 +296,15 @@
      "output_type": "stream",
      "text": [
       "Getting book 6762...\n",
-      "\t584611 characters read\n",
+      "\t574887 characters read\n",
       "Getting book 1497...\n",
-      "\t1219052 characters read\n",
+      "\t1194507 characters read\n",
       "Getting book 8438...\n",
-      "\t648768 characters read\n",
+      "\t636926 characters read\n",
       "Getting book 1600...\n",
-      "\t181248 characters read\n",
+      "\t178335 characters read\n",
       "Getting book 1656...\n",
-      "\t87284 characters read\n"
+      "\t85851 characters read\n"
      ]
     }
    ],
@@ -316,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 29,
    "id": "317fb7a3",
    "metadata": {},
    "outputs": [
@@ -324,8 +325,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "DATA_ENCODED = array([1181,   25, 9326, ..., 4819, 4354, 1842], shape=(626081,))\n",
-      "626081\n"
+      "DATA_ENCODED = array([1181,   25, 9326, ..., 4819, 4354, 1842], shape=(556819,))\n",
+      "556819\n"
      ]
     }
    ],
@@ -355,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "e469a1d4",
    "metadata": {},
    "outputs": [],
@@ -384,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 31,
    "id": "a7248308",
    "metadata": {},
    "outputs": [
@@ -393,24 +394,23 @@
      "output_type": "stream",
      "text": [
       "torch.Size([5, 10])\n",
-      "tensor([[-1.5844e-01, -1.2614e-01, -1.5132e-01, -7.4821e-02, -3.3354e-02,\n",
-      "         -1.7954e-01,  5.4231e-03,  5.0504e-01,  1.9708e-01,  5.3856e-01],\n",
-      "        [-2.9039e-02, -4.2993e-01,  3.6675e-02, -8.0885e-02,  1.5491e-01,\n",
-      "          3.9740e-01,  1.4762e-01,  2.9777e-01,  4.1032e-01, -1.1207e-01],\n",
-      "        [-1.8447e-01, -5.5580e-02,  1.8991e-02,  2.4289e-01,  2.5611e-01,\n",
-      "          2.5013e-04, -2.4621e-01,  3.9945e-01,  1.0713e-02,  3.0392e-01],\n",
-      "        [-3.0789e-01, -1.8269e-01, -1.0287e-01,  2.2861e-01,  2.4110e-01,\n",
-      "         -1.2972e-01, -1.8224e-01,  4.0773e-01,  1.4991e-01,  3.6655e-01],\n",
-      "        [ 2.3969e-01,  3.0128e-01,  1.3705e-01,  2.0809e-01, -2.6409e-01,\n",
-      "          4.6971e-01, -2.3857e-01,  2.3207e-01, -3.3052e-01,  5.8728e-02]],\n",
-      "       grad_fn=<AddmmBackward0>)\n"
+      "tensor([[-0.5493, -0.2684, -0.0968,  0.3741,  0.0723,  0.0959, -0.2844, -0.1960,\n",
+      "         -0.4201,  0.3676],\n",
+      "        [-0.1929,  0.0076, -0.2940,  0.2168,  0.1678,  0.2253, -0.2690, -0.0567,\n",
+      "         -0.1951,  0.1583],\n",
+      "        [-0.2450, -0.0012, -0.1868,  0.3602, -0.1031, -0.1000, -0.2043,  0.0320,\n",
+      "         -0.2973,  0.1837],\n",
+      "        [ 0.0243, -0.0332, -0.1092,  0.2460,  0.1265,  0.1983, -0.2735, -0.0014,\n",
+      "         -0.2671,  0.1175],\n",
+      "        [-0.1961, -0.0961, -0.3776,  0.2605, -0.1658,  0.0275, -0.0723,  0.1392,\n",
+      "         -0.4074,  0.1715]], grad_fn=<AddmmBackward0>)\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\Sawyer\\Documents\\decodingGPT\\transformer\\.venv\\Lib\\site-packages\\torch\\nn\\modules\\module.py:1776: UserWarning: Implicit dimension choice for softmax has been deprecated. Change the call to include dim=X as an argument.\n",
+      "/Users/danielkrawciw/Documents/llms/transformer/.venv/lib/python3.12/site-packages/torch/nn/modules/module.py:1776: UserWarning: Implicit dimension choice for softmax has been deprecated. Change the call to include dim=X as an argument.\n",
       "  return self._call_impl(*args, **kwargs)\n"
      ]
     }
@@ -436,26 +436,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 32,
    "id": "6758f832",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[ 1.2841,  1.2585, -0.3046,  1.2458,  1.5591, -1.8320, -2.0312,  0.7599,\n",
-       "         -0.4450,  0.2922],\n",
-       "        [-1.0739,  2.1877, -0.6875,  1.9496, -0.1120,  1.7716, -3.3345, -1.2047,\n",
-       "         -0.1815, -0.4620],\n",
-       "        [ 1.3334,  1.3246,  0.6766, -0.3026, -0.3247,  0.9369, -1.8377, -0.6661,\n",
-       "         -1.1505, -0.4307],\n",
-       "        [ 1.0869,  0.6554,  0.4093, -0.9846,  1.3897,  0.2202, -0.2722, -0.9686,\n",
-       "          0.1981,  1.2969],\n",
-       "        [ 0.1931, -0.3004, -1.2248, -0.1256,  1.0818,  0.3864,  0.1961, -1.7655,\n",
-       "         -0.2540, -0.4553]], grad_fn=<AddBackward0>)"
+       "tensor([[ 0.2773,  0.7253,  0.5719, -1.7431, -0.1302, -0.3975, -0.2319,  0.2165,\n",
+       "          1.0754, -0.0426],\n",
+       "        [-2.0967, -0.3822, -0.7674, -0.7428,  0.7722,  1.1141, -0.1975, -0.2895,\n",
+       "          3.2041, -0.6895],\n",
+       "        [-0.3861,  1.1865, -0.7214,  0.8240,  0.2769,  1.4384, -0.4193, -0.0209,\n",
+       "          1.0260,  1.0568],\n",
+       "        [ 0.7886, -0.1820,  0.4263,  0.3803,  0.8514,  1.6074, -0.7250,  0.4351,\n",
+       "          1.4699, -0.4978],\n",
+       "        [ 0.5343,  0.5985,  1.1189,  0.9977, -0.7954, -1.7470,  1.5594, -0.5268,\n",
+       "          1.3567, -0.8963]], grad_fn=<AddBackward0>)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -499,7 +499,26 @@
    "execution_count": null,
    "id": "8470fa6f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "embedding(): argument 'indices' (position 2) must be Tensor, not numpy.ndarray",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[33]\u001b[39m\u001b[32m, line 10\u001b[39m\n\u001b[32m      8\u001b[39m training_data = torch.utils.data.TensorDataset(torch.from_numpy(DATA_ENCODED[:-\u001b[32m1\u001b[39m]),torch.from_numpy(DATA_ENCODED[\u001b[32m1\u001b[39m:]))\n\u001b[32m      9\u001b[39m transformer = Transformer(config=conf)\n\u001b[32m---> \u001b[39m\u001b[32m10\u001b[39m output = \u001b[43mtransformer\u001b[49m\u001b[43m(\u001b[49m\u001b[43mDATA_ENCODED\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Documents/llms/transformer/.venv/lib/python3.12/site-packages/torch/nn/modules/module.py:1776\u001b[39m, in \u001b[36mModule._wrapped_call_impl\u001b[39m\u001b[34m(self, *args, **kwargs)\u001b[39m\n\u001b[32m   1774\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m._compiled_call_impl(*args, **kwargs)  \u001b[38;5;66;03m# type: ignore[misc]\u001b[39;00m\n\u001b[32m   1775\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m-> \u001b[39m\u001b[32m1776\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_call_impl\u001b[49m\u001b[43m(\u001b[49m\u001b[43m*\u001b[49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43m*\u001b[49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Documents/llms/transformer/.venv/lib/python3.12/site-packages/torch/nn/modules/module.py:1787\u001b[39m, in \u001b[36mModule._call_impl\u001b[39m\u001b[34m(self, *args, **kwargs)\u001b[39m\n\u001b[32m   1782\u001b[39m \u001b[38;5;66;03m# If we don't have any hooks, we want to skip the rest of the logic in\u001b[39;00m\n\u001b[32m   1783\u001b[39m \u001b[38;5;66;03m# this function, and just call forward.\u001b[39;00m\n\u001b[32m   1784\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m (\u001b[38;5;28mself\u001b[39m._backward_hooks \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m._backward_pre_hooks \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m._forward_hooks \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m._forward_pre_hooks\n\u001b[32m   1785\u001b[39m         \u001b[38;5;129;01mor\u001b[39;00m _global_backward_pre_hooks \u001b[38;5;129;01mor\u001b[39;00m _global_backward_hooks\n\u001b[32m   1786\u001b[39m         \u001b[38;5;129;01mor\u001b[39;00m _global_forward_hooks \u001b[38;5;129;01mor\u001b[39;00m _global_forward_pre_hooks):\n\u001b[32m-> \u001b[39m\u001b[32m1787\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mforward_call\u001b[49m\u001b[43m(\u001b[49m\u001b[43m*\u001b[49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43m*\u001b[49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   1789\u001b[39m result = \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[32m   1790\u001b[39m called_always_called_hooks = \u001b[38;5;28mset\u001b[39m()\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[23]\u001b[39m\u001b[32m, line 58\u001b[39m, in \u001b[36mTransformer.forward\u001b[39m\u001b[34m(self, x)\u001b[39m\n\u001b[32m     57\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mforward\u001b[39m(\u001b[38;5;28mself\u001b[39m, x):\n\u001b[32m---> \u001b[39m\u001b[32m58\u001b[39m     x = \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43membedding\u001b[49m\u001b[43m(\u001b[49m\u001b[43mx\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     59\u001b[39m     \u001b[38;5;28;01mfor\u001b[39;00m i, l \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28menumerate\u001b[39m(\u001b[38;5;28mself\u001b[39m.transformerBlock):\n\u001b[32m     60\u001b[39m         x = \u001b[38;5;28mself\u001b[39m.transformerBlock[i](x)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Documents/llms/transformer/.venv/lib/python3.12/site-packages/torch/nn/modules/module.py:1776\u001b[39m, in \u001b[36mModule._wrapped_call_impl\u001b[39m\u001b[34m(self, *args, **kwargs)\u001b[39m\n\u001b[32m   1774\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m._compiled_call_impl(*args, **kwargs)  \u001b[38;5;66;03m# type: ignore[misc]\u001b[39;00m\n\u001b[32m   1775\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m-> \u001b[39m\u001b[32m1776\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_call_impl\u001b[49m\u001b[43m(\u001b[49m\u001b[43m*\u001b[49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43m*\u001b[49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Documents/llms/transformer/.venv/lib/python3.12/site-packages/torch/nn/modules/module.py:1787\u001b[39m, in \u001b[36mModule._call_impl\u001b[39m\u001b[34m(self, *args, **kwargs)\u001b[39m\n\u001b[32m   1782\u001b[39m \u001b[38;5;66;03m# If we don't have any hooks, we want to skip the rest of the logic in\u001b[39;00m\n\u001b[32m   1783\u001b[39m \u001b[38;5;66;03m# this function, and just call forward.\u001b[39;00m\n\u001b[32m   1784\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m (\u001b[38;5;28mself\u001b[39m._backward_hooks \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m._backward_pre_hooks \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m._forward_hooks \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m._forward_pre_hooks\n\u001b[32m   1785\u001b[39m         \u001b[38;5;129;01mor\u001b[39;00m _global_backward_pre_hooks \u001b[38;5;129;01mor\u001b[39;00m _global_backward_hooks\n\u001b[32m   1786\u001b[39m         \u001b[38;5;129;01mor\u001b[39;00m _global_forward_hooks \u001b[38;5;129;01mor\u001b[39;00m _global_forward_pre_hooks):\n\u001b[32m-> \u001b[39m\u001b[32m1787\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mforward_call\u001b[49m\u001b[43m(\u001b[49m\u001b[43m*\u001b[49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43m*\u001b[49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   1789\u001b[39m result = \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[32m   1790\u001b[39m called_always_called_hooks = \u001b[38;5;28mset\u001b[39m()\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Documents/llms/transformer/.venv/lib/python3.12/site-packages/torch/nn/modules/sparse.py:191\u001b[39m, in \u001b[36mEmbedding.forward\u001b[39m\u001b[34m(self, input)\u001b[39m\n\u001b[32m    190\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mforward\u001b[39m(\u001b[38;5;28mself\u001b[39m, \u001b[38;5;28minput\u001b[39m: Tensor) -> Tensor:\n\u001b[32m--> \u001b[39m\u001b[32m191\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mF\u001b[49m\u001b[43m.\u001b[49m\u001b[43membedding\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m    192\u001b[39m \u001b[43m        \u001b[49m\u001b[38;5;28;43minput\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[32m    193\u001b[39m \u001b[43m        \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mweight\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    194\u001b[39m \u001b[43m        \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mpadding_idx\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    195\u001b[39m \u001b[43m        \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mmax_norm\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    196\u001b[39m \u001b[43m        \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mnorm_type\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    197\u001b[39m \u001b[43m        \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mscale_grad_by_freq\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    198\u001b[39m \u001b[43m        \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43msparse\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    199\u001b[39m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Documents/llms/transformer/.venv/lib/python3.12/site-packages/torch/nn/functional.py:2567\u001b[39m, in \u001b[36membedding\u001b[39m\u001b[34m(input, weight, padding_idx, max_norm, norm_type, scale_grad_by_freq, sparse)\u001b[39m\n\u001b[32m   2561\u001b[39m     \u001b[38;5;66;03m# Note [embedding_renorm set_grad_enabled]\u001b[39;00m\n\u001b[32m   2562\u001b[39m     \u001b[38;5;66;03m# XXX: equivalent to\u001b[39;00m\n\u001b[32m   2563\u001b[39m     \u001b[38;5;66;03m# with torch.no_grad():\u001b[39;00m\n\u001b[32m   2564\u001b[39m     \u001b[38;5;66;03m#   torch.embedding_renorm_\u001b[39;00m\n\u001b[32m   2565\u001b[39m     \u001b[38;5;66;03m# remove once script supports set_grad_enabled\u001b[39;00m\n\u001b[32m   2566\u001b[39m     _no_grad_embedding_renorm_(weight, \u001b[38;5;28minput\u001b[39m, max_norm, norm_type)\n\u001b[32m-> \u001b[39m\u001b[32m2567\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mtorch\u001b[49m\u001b[43m.\u001b[49m\u001b[43membedding\u001b[49m\u001b[43m(\u001b[49m\u001b[43mweight\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43minput\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mpadding_idx\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mscale_grad_by_freq\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msparse\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[31mTypeError\u001b[39m: embedding(): argument 'indices' (position 2) must be Tensor, not numpy.ndarray"
+     ]
+    }
+   ],
    "source": [
     "conf = Config(d_model = 10, \n",
     "              d_vocab = len(VOCAB_DICT), \n",
@@ -508,15 +527,14 @@
     "              n_layers = 2\n",
     "              )\n",
     "\n",
-    "\n",
-    "transformer = Transformer(config=conf)\n",
-    "output = transformer(DATA_ENCODED)"
+    "training_data = torch.utils.data.TensorDataset(torch.from_numpy(DATA_ENCODED[:-1]),torch.from_numpy(DATA_ENCODED[1:]))\n",
+    "model = Transformer(config=conf)\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "transformer (3.12.5)",
+   "display_name": "transformer",
    "language": "python",
    "name": "python3"
   },
@@ -530,7 +548,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.5"
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
