--- a/transformer.ipynb
+++ b/transformer.ipynb
@@ -527,7 +527,11 @@
     "              n_layers = 2\n",
     "              )\n",
     "\n",
+    "#dataset and dataloader\n",
     "training_data = torch.utils.data.TensorDataset(torch.from_numpy(DATA_ENCODED[:-1]),torch.from_numpy(DATA_ENCODED[1:]))\n",
+    "train_dataloader = torch.utils.data.DataLoader(training_data, batch_size=64, shuffle=True)\n",
+    "\n",
+    "\n",
     "model = Transformer(config=conf)\n"
    ]
   }
